app/assets/stylesheets/application.css.scss
/* ... */
.container#thumbnail-container {
  width: 400px;
};

.thumb-button {
  position: relative;
  float: right;
  margin-left: 5px;
  margin-top: 10px;
};

#thumbnail-container .thumb-1 {
  width: 400px;
  padding: 0px;
}

.thumb-buttons, .thumb-descr {
  padding: 0px;
};


.thumb-title, .thumb-user-name {
  margin-bottom: 0px;
  margin-top: 10px;
};

.page-title {
  text-align: center;
};

* #vevo-overlay {
  position: relative;
};

* div.vevo-overlay {
  opacity: 0;
  position: absolute;
  left: 0px; top: 0; height: 225px; width: 400px;
};

.thumb-image {
  height: 225px;
};



//playlist thumbnail


#playlist-thumbnail-overlay {
  position: relative;
  width: 400px;
};

#playlist-thumbnail-overlay > div.overlay {
  opacity: .5;
  background-color: black;
  position: absolute;
  left: 0; top: 0; height: 225px; width: 400px;
  text-align: center;
  font: 20px;
};

#playlist-thumbnail-overlay .thumb-playlist-title {
  font-size: 30px;
  text-align: center;
  position: absolute;
  // color: #9A84AD;
  color: white;
  width: 400px;
  letter-spacing: 8px;
};

#playlist-thumbnail-follow-button {
  position: absolute;
  // width: 400px;
  // right: 0px;
  float: right;
  // display: inline;
  // z-index: 10;
};

#playlist-thumbnail-link {
  width: 400px;
  display: inline-block;
};


// user thumbnail

.user-thumbnail {
  margin: 0px;
  padding: 0px;
};

#user-thumbnail {
  width: 220px;
  height: 290px;
};

#user-thumbnail .thumb {
  width: 180px;
  height: 180px;
  margin-bottom: 5px;
};


#user-thumbnail img, #user-thumbnail iframe {
  object-fit: cover;
  width: 180px;
  height: 180px;
  border-radius: 50%;
  margin-left: 20px;
  margin-right: 20px;

};

#user-thumbnail h4#thumb-user-name {
  display: block;
  font-size: 20px;
  text-align: center;
  width: 250px;
  color: white;
  margin-top: 0px;
  margin-bottom: 7px;
};

#user-thumbnail .follow-button{
  display: block;
  text-align: center;
  width: 250px;
};



//post show page

.show-delete {
  margin-top: 20px;
  float: right;
};

.show-delete:hover {
  margin-top: 20px;
};

.post-show-btn button {
  float: right;
};


.post-show-title {
  margin-left: -3px;
};

#post-show *:not(.fa) {
  color: white;
  font-family: 'Roboto', sans-serif;
};

#post-show .post-show-btn {
  padding: 0;
};

#post-show .post-like {
  // float: right;
  position: relative;
  bottom: 15px;
  right: 3px;
};

#post-show .post-show-title {
  font-size: 50px;
  margin-bottom: 12px;
  letter-spacing: 4px;
};

#post-show .post-show-row-2 #post-show-artist-buffer {
  height: 5px;
};

#post-show .post-show-row-2 .post-show-artist {
  margin: 0px;
};

#post-show > .post-show-row-4 h3.post-show-info,
#post-show > .post-show-row-4 .add-post-to-playlist {
  margin-top: 10px;
};

//playlist show page

#playlist-show * {
  color: white;
  font-family: 'Roboto', sans-serif;
};

#playlist-show .playlist-show-title {
  text-align: center;
  font-size: 50px;
  letter-spacing: 4px;
  margin-bottom: 25px;
};

#playlist-show .follow-button {
  margin-top: 20px;
  text-align: center;
};

#playlist-show .playlist-show-row-1 {
  margin-bottom: 75px;
};

#playlist-show .show-delete {
  margin-top: 20px;
  float: right;
};

#playlist-show .show-delete:hover {
  margin-top: 20px;
};

//user show page
#user-show * {
  color: white;
  font-family: 'Roboto', sans-serif;
};

#user-show .user-show-title {
  text-align: center;
  font-size: 50px;
  letter-spacing: 4px;
};

#user-show .user-show-subtitle {
  // text-align: center;
  font-size: 40px;
  letter-spacing: 4px;
};

#user-show .follow-button {
  margin-top: 20px;
  // float: right;
  text-align: center;
};


#user-show h2.user-show-subtitle {
  margin-bottom: 40px;
};

#user-show .user-subitem-box {
  margin-bottom: 100px;
};

#user-show .scroll-box {
  margin: 0px;
  height: 300px;
  background-color: rgba(214, 201, 218, 0.34);
  border: 2px solid #000;
  overflow: auto;
  overflow-y: hidden;
  box-shadow: 0 0 10px #000;
}

#user-show .scroll-box-list {
  float: left;
  margin-right: -999em;
  white-space: nowrap;
  list-style: none;
  height: 300px;
  padding-left: 10px;
}

#user-show .scroll-box-list > li {
  margin: 15px;
  float: left;
  display: inline-block;
  height: 300px;
  width: 400px;
}

#user-show .scroll-box-list .playlist-thumbnail:first-child {
  right: 50px;
}

